--- a/doc/paper/references.bib
+++ b/doc/paper/references.bib
@@ -1,5 +1,6 @@
-% This file was created with JabRef 2.10b2.
+% This file was created with JabRef 2.10.
 % Encoding: UTF-8
+
 
 @Article{dealii,
   Title                    = {{deal.II} -- a General Purpose Object Oriented Finite Element Library},
@@ -95,6 +96,17 @@
   Timestamp                = {2016.05.03}
 }
 
+@Article{m_matrix_fiedler,
+  Title                    = {On matrices with non-positive off-diagonal elements and positive
+ principal minors},
+  Author                   = {M. Fiedler and V. Ptak},
+  Journal                  = {Czechoslovak Mathematical Journal},
+  Year                     = {1962},
+  Number                   = {3},
+  Pages                    = {382--400},
+  Volume                   = {12}
+}
+
 @Article{fjordholm2011,
   Title                    = {Well-balanced and Energy Stable Schemes for the Shallow Water Equations with Discontinuous Topography},
   Author                   = {Fjordholm, Ulrik S. and Mishra, Siddhartha and Tadmor, Eitan},
@@ -186,6 +198,17 @@
   Timestamp                = {2016.01.20}
 }
 
+@Article{kuzmin_2011,
+  Title                    = {Slope limiting for discontinuous Galerkin approximations with a
+ possibly non-orthogonal Taylor basis},
+  Author                   = {D. Kuzmin},
+  Journal                  = {International Journal for Numerical Methods in Fluids},
+  Year                     = {2011},
+  Pages                    = {1--12},
+
+  Doi                      = {10.1002/fld}
+}
+
 @Book{kuzmin_FCT,
   Title                    = {Flux-Corrected Transport},
   Author                   = {D. Kuzmin and R. L{\"o}hner and S. Turek},
@@ -205,6 +228,18 @@
   Doi                      = {10.1016/j.jcp.2010.08.009},
   Owner                    = {joshua},
   Timestamp                = {2016.01.13}
+}
+
+@Article{lohner,
+  Title                    = {Finite Element Flux-Corrected Transport (FEM-FCT) for the Euler and Navier-Stokes Equations},
+  Author                   = {R. L\:{o}hner and K. Morgan and J. Peraire and M. Vahdati},
+  Journal                  = {International Journal for Numerical Methods in Fluids},
+  Year                     = {1987},
+  Pages                    = {1093--1109},
+  Volume                   = {7},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.09.10}
 }
 
 @Article{lanthrop,
@@ -227,6 +262,19 @@
   Number                   = { 4 },
   Pages                    = {687-700},
   Volume                   = { 62 }
+}
+
+@Article{Lesaint1974,
+  Title                    = {On a Finite Element Method for Solving the Neutron Transport Equation},
+  Author                   = {P. Lesaint and P. A. Raviart},
+  Journal                  = {Publications mathématiques et informatique de Rennes},
+  Year                     = {1974},
+  Number                   = {S4},
+  Pages                    = {1--40},
+
+  Language                 = {eng},
+  Publisher                = {Département de Mathématiques et Informatique, Université de Rennes},
+  Url                      = {http://eudml.org/doc/273730}
 }
 
 @Book{leveque2002,
@@ -322,6 +370,52 @@
   Timestamp                = {2016.01.18}
 }
 
+@InProceedings{parrott,
+  Title                    = {FCT Applied to the 2-D Finite Element Solution of Tracer Transport by Single Phase Flow in a Porous Medium},
+  Author                   = {A. K. Parrott and M. A. Christie},
+  Booktitle                = {Proceedings on the ICFD Conference on Numerical Methods in Fluid Dynamics},
+  Year                     = {1986},
+  Number                   = {609},
+  Publisher                = {Oxford University Press},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.09.10}
+}
+
+@Article{plemmons,
+  Title                    = {M-Matrix Characterizations I. -- Nonsingular M-Matrices},
+  Author                   = {R. J. Plemmins},
+  Journal                  = {Linear Algebra and its Applications},
+  Year                     = {1977},
+  Number                   = {2},
+  Pages                    = {175--188},
+  Volume                   = {18},
+
+  Doi                      = {10.1016/0024-3795(77)90073-8}
+}
+
+@Article{m_matrix_poole,
+  Title                    = {Generalized M-Matrices and Applications},
+  Author                   = {George D. Poole},
+  Journal                  = {Mathematics of Computation},
+  Year                     = {1975},
+
+  Month                    = {July},
+  Number                   = {131},
+  Pages                    = {903--910},
+  Volume                   = {29}
+}
+
+@InBook{Reed_Hill_1973,
+  Title                    = {Triangular mesh methods for the neutron transport equation},
+  Author                   = {Reed, W.H. and Hill, T.R.},
+  Year                     = {1973},
+  Month                    = {Oct},
+
+  Place                    = {United States},
+  Url                      = {http://www.osti.gov/scitech/servlets/purl/4491151}
+}
+
 @Book{toro2009,
   Title                    = {Riemann Solvers and Numerical Methods for Fluid Dynamics},
   Author                   = {Eleuterio F. Toro},
@@ -391,81 +485,19 @@
   Volume                   = {31}
 }
 
-@article{Lesaint1974,
-  author = {P. Lesaint and P. A. Raviart},
-  journal = {Publications mathématiques et informatique de Rennes},
-  language = {eng},
-  number = {S4},
-  pages = {1--40},
-  publisher = {Département de Mathématiques et Informatique, Université de Rennes},
-  title = {On a Finite Element Method for Solving the Neutron Transport Equation},
-  url = {http://eudml.org/doc/273730},
-  year = {1974},
+@Article{zingan_2013,
+  Title                    = {{Implementation of the entropy viscosity method with the discontinuous Galerkin method}},
+  Author                   = {{Zingan}, V. and {Guermond}, J.-L. and {Morel}, J. and {Popov}, B.
+ },
+  Journal                  = {Computer Methods in Applied Mechanics and Engineering},
+  Year                     = {2013},
+
+  Month                    = jan,
+  Pages                    = {479-490},
+  Volume                   = {253},
+
+  Adsnote                  = {Provided by the SAO/NASA Astrophysics Data System},
+  Adsurl                   = {http://adsabs.harvard.edu/abs/2013CMAME.253..479Z},
+  Doi                      = {10.1016/j.cma.2012.08.018}
 }
 
-@inbook{Reed_Hill_1973,
-  place={United States},
-  title={Triangular mesh methods for the neutron transport equation},
-  url={http://www.osti.gov/scitech/servlets/purl/4491151},
-  author={Reed, W.H. and Hill, T.R.},
-  year={1973},
-  month={Oct}
-}
-
-
-@ARTICLE{zingan_2013,
-   author = {{Zingan}, V. and {Guermond}, J.-L. and {Morel}, J. and {Popov}, B.
-  },
-    title = "{Implementation of the entropy viscosity method with the discontinuous Galerkin method}",
-  journal = {Computer Methods in Applied Mechanics and Engineering},
-     year = 2013,
-    month = jan,
-   volume = 253,
-    pages = {479-490},
-      doi = {10.1016/j.cma.2012.08.018},
-   adsurl = {http://adsabs.harvard.edu/abs/2013CMAME.253..479Z},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@article{kuzmin_2011,
-  author = {D. Kuzmin},
-  title = {Slope limiting for discontinuous Galerkin approximations with a
-    possibly non-orthogonal Taylor basis},
-  journal = {International Journal for Numerical Methods in Fluids},
-  year = {2011},
-  pages = {1--12},
-  doi = {10.1002/fld}
-}
-
-@article{m_matrix_fiedler,
-  author = {M. Fiedler and V. Ptak},
-  year = {1962},
-  title = {On matrices with non-positive off-diagonal elements and positive
-    principal minors},
-  journal = {Czechoslovak Mathematical Journal},
-  volume = {12},
-  number = {3},
-  pages = {382--400}
-}
-
-@article{m_matrix_poole,
-  author = {George D. Poole},
-  title = {Generalized M-Matrices and Applications},
-  journal = {Mathematics of Computation},
-  volume = {29},
-  number = {131},
-  month = {July},
-  year = {1975},
-  pages = {903--910}
-}
-
-@article{plemmons,
-  author = {R. J. Plemmins},
-  year = {1977},
-  title = {M-Matrix Characterizations I. -- Nonsingular M-Matrices},
-  journal = {Linear Algebra and its Applications},
-  volume = {18},
-  number = {2},
-  pages = {175--188},
-  doi = {10.1016/0024-3795(77)90073-8}
-}
